<resources>
    <string name="app_name">Test</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="our_categories">Our Categories</string>
    <string name="trending_products">Trending Products</string>
    <string name="back">Back</string>
    <string name="rent">Rent</string>
    <string name="refundable_deposit">Refundable Deposit</string>
    <string name="gift_message">Get 10% off on this product by using coupon code Nwqko</string>
    <string name="view_all_offers">View All Offers</string>
    <string name="select_tenure">Select Tenure</string>
    <string name="enter_your_tenure">Enter Your Tenure</string>
    <string name="add_to_cart">Add to Cart</string>

    <string-array name="cityNameList">
        <item>Nigeria</item>
        <item>Russia</item>
        <item>Mexico</item>
        <item>France</item>
        <item>Singapore</item>
        <item>Canada</item>
        <item>Japan</item>
        <item>Norway</item>
        <item>Pakistan</item>
        <item>India</item>
        <item>Denmark</item>
        <item>Italy</item>
        <item>Ukraine</item>
        <item>Spain</item>
        <item>Brazil</item>
        <item>Sweden</item>
        <item>Ireland</item>
    </string-array>
</resources>